@startuml database
hide circle
  entity Activity {
    * code
    --
    * label
  }

  entity Session {
    * id
    --
    * num_day
    * start_hour
    * end_hour
    * is_weekly: bool
    nb_max
  }

  entity Booking {
    * id
    --
    * lastname
    * firstname
    * amount
    * is_paid
    * phone
    * birthdate
    email
    * date
  }

  entity Date {
    * id
    --
    * type : ["canceled", "custom"]
    * date
  }

  entity Charity {
    * code
    --
    * name
    * contact
    address
    city
    zip_code
    country
  }

  Activity ||..o{ Session
  Session ||..o{ Booking
  Session ||..o{ Date
  Charity ||..o{ Booking
@enduml